GH-56: JAXB Upgrade Plan, Migration to Jakarta EE 10, Migration to Java 11 (#153)
* Migration to Java 11
* Migration to Jakarta EE 10
---------

Co-authored-by: Nicolas Filotto <nfilotto@talend.com>
Co-authored-by: ptorres-prowide <90214684+ptorres-prowide@users.noreply.github.com>
Co-authored-by: ptorres-prowide <pablo.torres@prowidesoftware.com>