@@ -58,7 +58,7 @@ public class UnparsedTextListTest {
     @Test
     public void test_addText() {
         t.addText(someText);
-        assertEquals(t.size(), new Integer(1));
+        assertEquals(t.size(), Integer.valueOf(1));
         assertEquals(t.getText(0), someText);
     }
 
@@ -72,9 +72,9 @@ public class UnparsedTextListTest {
 
     @Test
     public void test_size() {
-        assertEquals(t.size(), new Integer(0));
+        assertEquals(t.size(), Integer.valueOf(0));
         t.addText(someText);
-        assertEquals(t.size(), new Integer(1));
+        assertEquals(t.size(), Integer.valueOf(1));
     }
 
     @Test
@@ -113,7 +113,7 @@ public class UnparsedTextListTest {
         t.addText(msg);
 
         // check things out
-        assertEquals(t.size(), new Integer(1));
+        assertEquals(t.size(), Integer.valueOf(1));
         assertEquals(t.getText(0), msgString);
     }
 
@@ -123,7 +123,7 @@ public class UnparsedTextListTest {
         t.addText(someMsg);
         t.removeText(0);
         assertEquals(t.getText(0), someMsg);
-        assertEquals(t.size(), new Integer(1));
+        assertEquals(t.size(), Integer.valueOf(1));
     }
 
     @Test
@@ -137,7 +137,7 @@ public class UnparsedTextListTest {
         t.addText(someMsg);
         t.removeText(someText);
         assertEquals(t.getText(0), someMsg);
-        assertEquals(t.size(), new Integer(1));
+        assertEquals(t.size(), Integer.valueOf(1));
     }
 
     @Test
